crates/runtime/tests/search/snapshots/integration_models__search__duckdb-duckdb-no_text_engine-dataset-multi_embeddings_megascience_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) where subject!='math' order by _score desc, id LIMIT 4"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                               |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("secondary"), answer).id ASC NULLS LAST, fetch=4                                                                                             |
|               |   Projection: vector_search(qs, Utf8("secondary"), answer).id, vector_search(qs, Utf8("secondary"), answer).answer, trunc(vector_search(qs, Utf8("secondary"), answer)._score, Int64(3)) AS _score |
|               |     TableScan: vector_search(qs, Utf8("secondary"), answer) projection=[_score, answer, id], full_filters=[vector_search(qs, Utf8("secondary"), answer).subject != Utf8("math")]                   |
| physical_plan | SortExec: TopK(fetch=4), expr=[_score@2 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[false]                                                                                                  |
|               |   CoalescePartitionsExec                                                                                                                                                                           |
|               |     ProjectionExec: expr=[id@2 as id, answer@1 as answer, trunc(_score@0, 3) as _score]                                                                                                            |
|               |       ProjectionExec: expr=[_score@2 as _score, answer@1 as answer, id@0 as id]                                                                                                                    |
|               |         CooperativeExec                                                                                                                                                                            |
|               |           BytesProcessedExec                                                                                                                                                                       |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                   |
|               |               DuckDBVectorQueryExec embedded_column=answer_embedding, metric=cosine, dims=256, filters=[subject != Utf8("math")], scan=brute_force, projection=[id, answer, _score]                |
|               |                                                                                                                                                                                                    |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
